# tekhne

./: .gitignore  Cargo.toml  README.md
Assets/: GameInputs.inputactions
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/Prefabs/: Fallback.prefab  ItemGrass.prefab  ObjectLongGrass.prefab  ObjectPebbles.prefab  ObjectShortGrass.prefab  SurfaceDirt.prefab  SurfaceGrass.prefab  SurfaceGravel.prefab  SurfaceSand.prefab  SurfaceStone.prefab
Assets/Resources/: SurfaceGrass.prefab  SurfaceGravel.prefab  SurfaceSand.prefab  SurfaceStone.prefab
Assets/Scenes/: Game.unity  Main.unity
Assets/Scripts/: BoundsIntExt.cs  Context.cs  CustomPropertyEntity.cs  Entity.cs  EntityContext.cs  EntityRenderer.cs  EntityService.cs  GenerationRules.cs  GenerationService.cs  ICustomProperty.cs  IHarvestable.cs  Models.cs  Player.cs  Repositories.cs  Service.cs  Services.cs  Tekhne.asmdef  Tile.cs  TileContext.cs  TileRenderer.cs  TileService.cs  WorldRenderer.cs  WorldService.cs
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
assets/: assets.json
assets/shaders/: entity.wgsl  iunit.wgsl  player.wgsl  ui.wgsl  unit.wgsl
crates/aabb/: Cargo.toml
crates/atlas/: Cargo.toml
src/: aabb.rs  assets.rs  entity_service.rs  game_loop.rs  generation_service.rs  main.rs  models.rs  renderer.rs  services.rs  tile_service.rs
src/aabb/: aabb2.rs  grid.rs  iaabb2.rs
src/game_loop/: base.rs  block.rs  camera.rs  entity.rs  generation.rs  player.rs  ui.rs
src/model/: aabb.rs  block.rs  bounds.rs  camera.rs  entity.rs  iunit.rs  kind.rs  mod.rs  player.rs  resource_kind.rs  unit.rs  unit_kind.rs
src/render/: camera.rs  depth.rs  iunit.rs  iunit_texture.rs  mod.rs  player.rs  texture.rs  ui.rs  ui_camera.rs  unit.rs  unit_kind.rs  unit_texture.rs
src/renderer/: base.rs  block.rs  block.wgsl  camera.rs  entity.rs  gui.rs  iunit.rs  mod.rs  player.rs  texture.rs  unit.rs
src/renderers/: iunit.rs  mod.rs  player.rs
(+68 files in other folders)
