[package]
name = "tekhne"
version = "0.1.0"
edition = "2021"

[dependencies]
aabb = { path = "crates/aabb" }
ahash = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.24"
egui-wgpu = "0.24"
glam = { version = "0.24", features = ["bytemuck"] }
image = { version = "0.24", default-features = false, features = ["png"] }
image-atlas = "0.3"
itertools = "0.11"
pollster = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4"
wgpu = "0.18"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland"] }
winit_input_helper = "0.15"

[workspace]
members = ["crates/*"]
