[package]
name = "tekhne"
version = "0.1.0"
edition = "2021"

[dependencies]
aabb = { path = "crates/aabb" }
ahash = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
egui = "0.25"
egui-wgpu = "0.25"
egui-winit = { version = "0.25.0", features = ["x11", "wayland"] }
glam = { version = "0.25", features = ["bytemuck"] }
image = { version = "0.24", default-features = false, features = ["png"] }
image-atlas = "0.3"
itertools = "0.12"
pollster = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4"
wgpu = "0.18"
winit = { version = "0.29", default-features = false, features = ["x11", "wayland", "rwh_05"] }
winit_input_helper = "0.15"

[workspace]
members = ["crates/*"]
