[package]
name = "wgpu-tilemap-game"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
bytemuck = { version = "1.15", features = ["derive"] }
float_next_after = "1"
glam = { version = "0.27", features = ["bytemuck"] }
image = { version = "0.25" }
image-atlas = "0.4"
itertools = "0.12"
pollster = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4"
wgpu = "0.19"
winit = { version = "0.29" }
winit_input_helper = "0.16"
